*Empty MediaWiki Message*

--- a/Itran_n_Imucaɣ.mw
+++ b/Itran_n_Imucaɣ.mw
@@ -1,29 +1,29 @@
 '''Tezedmin n imucaɣ''' d [[tamusni]] n [[Imucaɣ]] ɣef [[tazdemt|tzedmin]] d [[itri|yetran]] imi d itran i d-t-nittanren (id t-niheddun) mi ara ad ttinigen deg [[taneẓruft|tniriwin]]. Ula d Imucaɣ ufan deg [[igenni]] igrawen  n yetran yecban zund kra n tugniwin, am akken i t-xedmen si zik [[aɣref|iɣerfan]] niden.
 
 == Tifrawin n tzedmin ==
-[[Image:Finding arcturus.png|thumb|right|350px|Itran imeqqranen iweṣṣfen "talɣemt": sbaɛ yetran n ''[[Ursa Maior]]'' rnu-yasen [[Arcturus|Arcturus]]. Lxeṭṭ yesdukulen akasrun d ''Arcturus'' yettban am yiri-s gezzifen iqewwsen.]]
-* '''[[Ursa Maior|Ursa Maior]]''' = ''talämt'' ([[alɣem|talɣemt]]), deg-s 9 yetran neɣ akter: 
-** 4 yetran n ukasrun ("la casserole") = ''iḍarren wi n eleqqam'' (tadawt, iḍarren ineggura) ak° d ''shiwa'' (iḍarren imezwura)
-** 3 yetran n ufettus-is = ''tekamci'' neɣ ''tikerdaf n iri n tälämt'' (iɣsan n iri n telɣemt), bac a nemqet:
-**# [[Alioth]] = ''takerduft ta täzzarät'' (iɣes n iri amezwaru)
-**# [[Mizar]] = ''takerduft ta n sänatät'' (iɣes n iri wis sin)
-**# [[Alkaid]] = ''takerduft ta n käradät'' (iɣes n iri wis tlata)
-** [[Arcturus|Arcturus]] = ''éɣaf n tälämt'' (aqerru n telɣemt)
-** itri ur nemeɛqul (wissen ma d η [[Bootis]] [Prasse et al.]? neɣ d [[Alcor]] [Barrère]?) = ''énaḍ'' ("aḥeddad")
-** ɛlaḥsab n Duveyrier, rnun-asen yetran wiyaḍ (ψ, λ, μ, ν, ξ ''Ursae Maioris'') yellan d ''eljemɣat'' ("agraw, tajmaɛt")
+[[Image:Finding arcturus.png|thumb|right|350px|Itran imeqqranen igellmen "talɣemt" deg-s 7 n yetran n [[talamt]] s tmerniwt n [[Arcturus|Arcturus]]. Izirig yesdukkulen akasrun d ''Arcturus'' yettban am yiri-s gezzifen iqewwsen.]]
+* '''[[Talamt|Ursa Maior]]'''=  ([[alɣem|talɣemt]]), deg-s 9 yetran neɣ ugar: 
+** iṭarren wi n eleqqam'' (tadawt, iṭarren n deffir) akk d ''ciwa'' (iṭarren n zdat)
+** 3 yetran n ufettus-is = ''takamci'' neɣ ''tikerdaf n iri n talamt'' (iɣsan n iri n telɣemt), s wudem ufrin:
+**# [[iɣes n iri amezwaru|Alioth]] = ''takerduft ta tazzarat''
+**# [[iɣes n iri wis sin|Mizar]] = ''takerduft ta n sänatät''
+**# [[iɣes n iri wis |Alkaid]] = ''takerduft ta n käradät'' 
+** [[Iɣef n telɣemt|Arcturus]] = ''iɣaf n tälämt'' 
+** [[inad|Alcor]] = ''énaḍ''
+** S unect n Duveyrier, rennun-asen yetran wiyaḍ (ψ, λ, μ, ν, ξ ''Ursae Maioris'') yellan d ''eljemɣat'' (agraw)
 
-* '''[[Ursa Minor|Ursa Minor]]''' = ''äwära'' (aberhuc n telɣemt) 
+* '''[[Awara|Ursa Minor]]''' = ''äwära'' (mmis n telɣemt) 
 ** [[Itri n ugafa]] = ''lenkecem''
 
-* '''[[Pleiades]]''' = ''Cet Ehoḍ'' (Yessi-s n yiḍ), Tislitin n ''Aldebaran'' d ''Orion'', di 7 yid-sent, bac a nemqet 3 iyugwin d yiwet yellan n weḥd-es:
-**''ma teseksek'' ak° d ''essek-awet''
-**''ma teleɣleɣ'' ak° d ''elleɣ-awet''
-**''ma teregreg'' ak° d ''erreg-awet''
-** ''tiṭ-ennit aba-tet'' (tin war tiṭṭ-is)/''Fadimata is ikkăs Amănăr teṭṭ-ennit făl telleq n ebdebed'' (Faḍimata yesmundel ''Orion'' i lmend n umennuɣ af ik°emmic n lḥebb)
-* '''[[Aries]]''' (35 Arietis, 41 Arietis, 39 Arietis) = ''tamezgida n Cet Ehoḍ'' (Tamezgida n Yessi-s n yiḍ).
+* '''[[issi-s yiṭ|Pleiades]]''' = ''Cet Ehoḍ'' (issi-s n yiḍ), Tislitin n ''Aldebaran'' d ''Orion'', di 7 yid-sent, i wakken ad nemqet 3 n tyugiwin d yiwet yellan n iman-is:
+**''ma teseksek'' akk d ''essek-awet''
+**''ma teleɣleɣ'' akk d ''elleɣ-awet''
+**''ma teregreg'' akk d ''erreg-awet''
+** ''tiṭ-ennit aba-tet'' (tin war tiṭṭ-is)/''Fadimata is ikkăs Amănăr teṭṭ-ennit făl telleq n ebdebed'' (Faḍimata yesmundel ''Orion'' i lmend n umennuɣ af wuraw n ifsan)
+* '''[[Tamezgida n Yessi-s n yiṭ|Aries]]''' (35 Arietis, 41 Arietis, 39 Arietis) = ''tamezgida n Cet Ehoḍ''
 
-* '''[[Hyades]]''' = ''ulli'' (tixsi)
-* '''[[Ettaj n Buriya]]''' = ''abuk n enaḍen'' (atemmu n iḥeddaden)
+* '''[[Ulli (tazdemt)|Hyades]]''' = ''ulli'' (tixsi)
+* '''[[Atemmu n wemzil|Corona Borealis]]''' = ''abuk n enaḍen''
 ** [[Alphecca]], itri tafat-is tif wiyaḍ irkull, d lkanun anda xeddemen
 
 * '''[[Orion (agdud)|Orion]]''' = ''Amänär'' (aneḥkam)
