*Empty MediaWiki Message*

--- a/Itran_n_Imucaɣ.mw
+++ b/Itran_n_Imucaɣ.mw
@@ -24,13 +24,13 @@
 
 * '''[[Ulli (tazdemt)|Hyades]]''' = ''ulli'' (tixsi)
 * '''[[Atemmu n wemzil|Corona Borealis]]''' = ''abuk n enaḍen''
-** [[Alphecca]], itri tafat-is tif wiyaḍ irkull, d lkanun anda xeddemen
+** [[Talefka|Alphecca]], itri tafat-is tif tafat n yitran n iden yakk
 
-* '''[[Orion (agdud)|Orion]]''' = ''Amänär'' (aneḥkam)
-** [[Betelgeuse]] = ''afus wa n äghil'' (afus ayeffus)
+* '''[[Amanar|Orion]]''' = ''Amänär'' 
+** [[Afus ayeffu(tazdemt)|Betelgeuse]] = ''afus wa n aɣil'' 
 ** [[Bellatrix]] = ''afus wa n tecalge'' (afus azelmaḍ)
-** [[Abagus n Orion]] = ''tagbest n Amänär'' (abagus n Umanar)/''Takuba n Amänär'' (llemca n Umanar) 
-** [[Rigel]] = ''aḍer n alaku'' (aḍar [azelmaḍ] iɣeṭṭṣen deg waluḍ)
+** [[Tagbest n umanar]] = ''tagbest n Amänär'' 
+** [[Aṭaṛ n ulaku|Rigel]] = ''aḍer n alaku''
 ** "Bouclier" n Orione (π<sub>1</sub>-π<sub>6</sub> Ori) = ''tamezgida n Amänär'' (tamezgida n Umanar)
 ** [[Agu n yetran n Orion]] = ''eyy'' (neɣ ''äshiwa'') ''n Amänär'' (tanefsit n Umanar)
 
