*Empty MediaWiki Message*

--- a/Itran_n_Imucaɣ.mw
+++ b/Itran_n_Imucaɣ.mw
@@ -2,12 +2,12 @@
 
 == Tifrawin n tzedmin ==
 [[Image:Finding arcturus.png|thumb|right|350px|Itran imeqqranen igellmen "talɣemt" deg-s 7 n yetran n [[talamt]] s tmerniwt n [[Arcturus|Arcturus]]. Izirig yesdukkulen akasrun d ''Arcturus'' yettban am yiri-s gezzifen iqewwsen.]]
-* '''[[Talamt|Ursa Maior]]'''=  ([[alɣem|talɣemt]]), deg-s 9 yetran neɣ ugar: 
+* '''[[Talamt|Ursa Maior]]'''=  (''talamt''), deg-s 9 yetran neɣ ugar: 
 ** iṭarren wi n eleqqam'' (tadawt, iṭarren n deffir) akk d ''ciwa'' (iṭarren n zdat)
 ** 3 yetran n ufettus-is = ''takamci'' neɣ ''tikerdaf n iri n talamt'' (iɣsan n iri n telɣemt), s wudem ufrin:
-**# [[iɣes n iri amezwaru|Alioth]] = ''takerduft ta tazzarat''
-**# [[iɣes n iri wis sin|Mizar]] = ''takerduft ta n sänatät''
-**# [[iɣes n iri wis |Alkaid]] = ''takerduft ta n käradät'' 
+**# [[Takerduft tamezwart|Alioth]] = ''takerduft ta tazzarat''
+**# [[Takerduft tis snat|Mizar]] = ''takerduft ta n sänatät''
+**# [[Takerduft tis kṛad|Alkaid]] = ''takerduft ta n käradät'' 
 ** [[Iɣef n telɣemt|Arcturus]] = ''iɣaf n tälämt'' 
 ** [[inad|Alcor]] = ''énaḍ''
 ** S unect n Duveyrier, rennun-asen yetran wiyaḍ (ψ, λ, μ, ν, ξ ''Ursae Maioris'') yellan d ''eljemɣat'' (agraw)
@@ -15,28 +15,28 @@
 * '''[[Awara|Ursa Minor]]''' = ''äwära'' (mmis n telɣemt) 
 ** [[Itri n ugafa]] = ''lenkecem''
 
-* '''[[issi-s yiṭ|Pleiades]]''' = ''Cet Ehoḍ'' (issi-s n yiḍ), Tislitin n ''Aldebaran'' d ''Orion'', di 7 yid-sent, i wakken ad nemqet 3 n tyugiwin d yiwet yellan n iman-is:
-**''ma teseksek'' akk d ''essek-awet''
-**''ma teleɣleɣ'' akk d ''elleɣ-awet''
-**''ma teregreg'' akk d ''erreg-awet''
+* '''[[issi-s yiṭ|Pleiades]]''' = ''Cet Ehoḍ'', Tislitin n ''Aldebaran'' d ''Orion'', di 7 yid-sent, i wakken ad nemqet 3 n tyugiwin d yiwet yellan s iman-is:
+** ''ma teseksek'' akk d ''essek-awet''
+** ''ma teleɣleɣ'' akk d ''elleɣ-awet''
+** ''ma teregreg'' akk d ''erreg-awet''
 ** ''tiṭ-ennit aba-tet'' (tin war tiṭṭ-is)/''Fadimata is ikkăs Amănăr teṭṭ-ennit făl telleq n ebdebed'' (Faḍimata yesmundel ''Orion'' i lmend n umennuɣ af wuraw n ifsan)
-* '''[[Tamezgida n Yessi-s n yiṭ|Aries]]''' (35 Arietis, 41 Arietis, 39 Arietis) = ''tamezgida n Cet Ehoḍ''
+* '''[[Tamezgida n yessi-s n yiṭ|Aries]]''' (35 Arietis, 41 Arietis, 39 Arietis) = ''tamezgida n Cet Ehoḍ''
 
 * '''[[Ulli (tazdemt)|Hyades]]''' = ''ulli'' (tixsi)
 * '''[[Atemmu n wemzil|Corona Borealis]]''' = ''abuk n enaḍen''
 ** [[Talefka|Alphecca]], itri tafat-is tif tafat n yitran n iden yakk
 
 * '''[[Amanar|Orion]]''' = ''Amänär'' 
-** [[Afus ayeffu(tazdemt)|Betelgeuse]] = ''afus wa n aɣil'' 
-** [[Bellatrix]] = ''afus wa n tecalge'' (afus azelmaḍ)
-** [[Tagbest n umanar]] = ''tagbest n Amänär'' 
-** [[Aṭaṛ n ulaku|Rigel]] = ''aḍer n alaku''
-** "Bouclier" n Orione (π<sub>1</sub>-π<sub>6</sub> Ori) = ''tamezgida n Amänär'' (tamezgida n Umanar)
-** [[Agu n yetran n Orion]] = ''eyy'' (neɣ ''äshiwa'') ''n Amänär'' (tanefsit n Umanar)
+** [[Afus ayeffus (tazdemt)|Betelgeuse]] = ''afus wa n aɣil'' 
+** [[Afus azelmaṭ|Bellatrix]] = ''afus wa n tecalge''
+** [[Tagbest n umanar|Orion's Belt]] = ''tagbest n Amänär'' 
+** [[Aṭar n ulaku|Rigel]] = ''aḍer n alaku''
+** "[[Tamezgida n umanar|Pi Orionis]] (π<sub>1</sub>-π<sub>6</sub> Ori) = ''tamezgida n Amänär''
+** [[Asignew n umanar]] = ''eyy'' neɣ ''äshiwa n Amänär'' 
 
-* '''[[Aṛamul]]''' ("Taurus") = ''Kukayoḍ''.  ''Kukayoḍ'' ama d isem n yitri n [[Aldebaran]] weḥd-es ama d isem n tarbaɛt n yitran (di tlata yid-sen) anda yella yitri-yagi: win d alemmas d eljetta; wiyaḍ d sin idisan-is.
+* '''[[Aramul (tazdemt)|Aramul]]''' ("Taurus") = ''Kukayud''. ama d isem n yitri n [[Aldebaran]] iman-is ama d isem n tegrawt n yitran (di 3 yid-sen) anda yella yitri-yagi: win d alemmas wiyaḍ di sin idisan-is.
 
-* '''[[Akniwen (itran)|Akniwen]]''' (Barrère) neɣ '''[[Ajdaɛ (itran)|Ajdaɛ]]''' ("Centaure") (Bernus-ag Sidyene) = ''ineran'' (izerzeren)
+* '''[[Akniwen (tazdemt)|Akniwen]]''' (Barrère) neɣ '''[[Ajdaɛ (itran)|Ajdaɛ]]''' ("Centaure") (Bernus-ag Sidyene) = ''ineran'' (izerzeren)
 ** ''ener'' (izerzer)
 ** ''tenert'' (tizerzert)
 
