*Empty MediaWiki Message*

--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -1,2 +1,2 @@
-'''Aṭṭan n Coronavirus 2019''' (s [[asegzel (tutlayt)|usegzel]]: '''covid-19''') akken yettwassnen daɣen s yisem n '''waṭṭan amesgunef amekruz yeqqnen ar Coronavirus amsetrar 2019''' iga d [[aṭṭan amesgunef]] [[aṭṭan aɣersaw|aɣersaw n usagma]] ixeddem-it-id [[SARS-CoV-2]] dɣa avirus-a d win yudsen s waṭas ar [[SARS-CoV]]. Yettwasnirem i tikkelt tamezwarut asmi [[tasekrart n Coronavirus 2019-20|yenfufed Coronavirus di Wuhan deg 2019]] aṭṭan-a d win id igellun s waṭas n waṭṭanen n iden am [[tawla]], [[tusut]] yakk d [[bungaf]] </>
+'''Aṭṭan n Coronavirus 2019''' (s [[asegzel (tutlayt)|usegzel]]: '''covid-19''') akken yettwassnen daɣen s yisem n '''waṭṭan amesgunef amekruz yeqqnen ar Coronavirus amsetrar 2019''' iga d [[aṭṭan amesgunef]] [[aṭṭan aɣersaw|aɣersaw n usagma]] ixeddem-it-id [[SARS-CoV-2]] dɣa avirus-a d win yudsen s waṭas ar [[SARS-CoV]]. Yettwasnirem i tikkelt tamezwarut asmi [[tasekrart n Coronavirus 2019-20|yenfufed Coronavirus di Wuhan deg 2019]] aṭṭan-a d win id igellun s waṭas n waṭṭanen n iden am [[tawla]], [[tusut]] yakk d [[bungaf]] <br/>
 Alammi d fuṛaṛ 2020 ulac assuji neɣ [[tigezt]] mgal n waṭṭan-a ayen yellan deg ufus n imsujiyen d [[Asuji n yiskanen|asefses n yiskanen]] d tedhelt n twiriwin n [[tafekka|tfekka]]
