*Empty MediaWiki Message*

--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -1,2 +1,2 @@
-'''Aṭṭan n Coronavirus 2019''' (s [[asegzel (tutlayt)|usegzel]]: '''covid-19''') akken yettwassnen daɣen s yisem n '''waṭṭan amesgunef amekruz yeqqnen ar Coronavirus amsetrar 2019''' iga d [[aṭṭan amesgunef]] [[aṭṭan aɣersaw|aɣersaw n usagma]] ixeddem-it-id [[SARS-CoV-2]] dɣa avirus-a d win yudsen s waṭas ar [[SARS-CoV]]. Yettwasnirem i tikkelt tamezwarut asmi [[tasekrart n Coronavirus 2019-20|yenfufed Coronavirus di Wuhan deg 2019]] aṭṭan-a d win id igellun s waṭas n waṭṭanen n iden am [[tawla]], [[tusut]] yakk d [[bungaf]] <br/>
+'''Aṭṭan n Coronavirus 2019''' (s [[asegzel (tutlayt)|usegzel]]: '''covid-19'''<ref>{{Cite report|url=https://www.who.int/docs/default-source/coronaviruse/situation-reports/20200211-sitrep-22-ncov.pdf|title=Novel Coronavirus (2019-nCoV): situation report, 22|last=|first=|date=February 11, 2020|publisher=[[Tuddsa tamadlant n tdawsa]]|issue=|doi=|volume=|pmid=|access-date=|vauthors=((World Health Organization))|year=| akala n ufaylu = https://web.archive.org/web/20200213033639/https://www.who.int/docs/default-source/coronaviruse/situation-reports/20200211-sitrep-22-ncov.pdf | azmez n ufaylu = 13 fuṛaṛ 2020 }}</ref>) akken yettwassnen daɣen s yisem n '''waṭṭan amesgunef amekruz yeqqnen ar Coronavirus amsetrar 2019''' iga d [[aṭṭan amesgunef]] [[aṭṭan aɣersaw|aɣersaw n usagma]] ixeddem-it-id [[SARS-CoV-2]] dɣa avirus-a d win yudsen s waṭas ar [[SARS-CoV]]. Yettwasnirem i tikkelt tamezwarut asmi [[tasekrart n Coronavirus 2019-20|yenfufed Coronavirus di Wuhan deg 2019]] aṭṭan-a d win id igellun s waṭas n waṭṭanen n iden am [[tawla]], [[tusut]] yakk d [[bungaf]] <br/>
 Alammi d fuṛaṛ 2020 ulac assuji neɣ [[tigezt]] mgal n waṭṭan-a ayen yellan deg ufus n imsujiyen d [[Asuji n yiskanen|asefses n yiskanen]] d tedhelt n twiriwin n [[tafekka|tfekka]]
