*Empty MediaWiki Message*

--- a/Seksu.mw
+++ b/Seksu.mw
@@ -1,10 +1,7 @@
 {{Databox}}
-Seksu i ssnen ukkʷ medden deg umaḍal ass-a,  d učči amensay n Yimaziɣen.  D nitni i t-id-yesnulfan aṭas aya,  seg wass mi kerzen tamurt i d-yeƫƫaken irden. Awren i d-yekkan ladɣa seg yirden neɣ si temẓin,  ssnen amek ad t-fetlen s uɣeṛval,  ad as-rnun tisent. Syen akkin, ad t-sfuṛen cwiṭ, ad t-fesren akken ad yeqqaṛ. Akka, ad yeṭṭef arma d assegʷas neɣ sin. 
+'''Seksu''' neɣ '''Siksu''' i ssnen ukk medden deg umaḍal ass-a,  d [[učči]] amensay n [[imaziɣen|imaziɣen]] adna d nutni i t-id-yesnulfan aṭas aya, tettmag s [[Awren|uwren]] n [[orden|yirden]] d [[timẓin|temẓi]] d [[ukbal|wekbal]]
 
-Si zik,  seksu ɣuṛ-s azal meqqʷṛen di tmetti Tamaziɣt. D učči i yeƫƫilin deg yal tagʷniƫ tameqqʷṛant n tudert n Yimaziɣen.  Di tlalit,  d seksu i teƫƫen yinevgawen d twacult. D seksu daɣen i ƫeggen d imensi ma ad fakken yinelmaden di tesdawit, neɣ deg uɣeṛvaz. Di tmeɣṛiwin, yal amezdaɣ n taddart d inevgi, ad d-yas ad yečč seksu s uksum. Deg wass aneggaru n ussegʷas Amaziɣ, deg yal axxam ad sebbʷen seksu s uyaziḍ i yimensi n Yennayer.
-
-Seksu yeƫƫili di tudert n Umaziɣ arma d taggara. Ma ad yemmet,  ad d-asen yimezdaɣ n taddart, ad d-zzin i tvaqit n seksu,  ad ččen di tsusmi. Nezmer ad d-nini,  seksu iƫeddu akkʷed Umaziɣ, si dduḥ arma d aẓekka.
-
+Si zik,  seksu ɣuṛ-s azal meqqʷṛen di tmetti Tamaziɣt. D učči i yettilin deg yal tegʷnit tameqqʷṛant n tudert n Yimaziɣen.  d seksu i tetten inebgiwen d twaculin deg yal talemmiẓt am [[yennayer|umenzu n yennayer]].
 
 ==Aɣvalu==
 Amagrad n Amayas Tiliwin deg http://tameddit.com
