--- a/Seksu.mw
+++ b/Seksu.mw
@@ -3,5 +3,5 @@
 
 Si zik,  seksu ɣuṛ-s azal meqqʷṛen di tmetti Tamaziɣt. D učči i yettilin deg yal tegʷnit tameqqʷṛant n tudert n Yimaziɣen.  d seksu i tetten inebgiwen d twaculin deg yal talemmiẓt am [[yennayer|umenzu n yennayer]].
 
-==Aɣvalu==
+==Aɣbalu==
 Amagrad n Amayas Tiliwin deg http://tameddit.com
