--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -12,3 +12,6 @@ Asrag n waṭṭan-a iga d avirus n [[SARS-CoV-2]]
 
 == Tawassna ==
 [[Tuddsa tamadlant n tdawsa]] tfesr-d aṭas n ipṛutukulen i wkayar n Coronavirus amsetrar <ref name="Schirring16Jan2020">{{amnir n web|akala=http://www.cidrap.umn.edu/news-perspective/2020/01/japan-has-1st-novel-coronavirus-case-china-reports-another-death |azwel=Japan has 1st novel coronavirus case; China reports another death |aneggar=Schirring |amezwar=Lisa |aneggar=2020 |azmez=16 January 2020 |n ufaylu=CIDRAP |url-status=live |akala afaylu=https://web.archive.org/web/20200120043657/http://www.cidrap.umn.edu/news-perspective/2020/01/japan-has-1st-novel-coronavirus-case-china-reports-another-death |azmez n ufaylu=20 January 2020 |azmez n tuwwṭa=16 yennayer 2020}}</ref><ref name="WHO_InterimGuidance">{{amnir n web|akala=https://www.who.int/health-topics/coronavirus/laboratory-diagnostics-for-novel-coronavirus |azwel=Laboratory testing for 2019 novel coronavirus (2019-nCoV) in suspected human cases: Interim guidance |adeg=[[tuddsa tamadlant n tdawsa]] |url-status=live |akala n ufaylu=https://web.archive.org/web/20200120175355/https://www.who.int/health-topics/coronavirus/laboratory-diagnostics-for-novel-coronavirus |azmez n ufaylu=20 January 2020 |azmez n tuwwṭa=28 yennayer 2020}}</ref>
+
+== Anfufed ==
+S unect n [[tasensakrart|tsensakrart]], [[isig n tmekkisin]] d waddaden n unfufed n waṭṭan-a ur yettwassnen ara
