--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -1,6 +1,6 @@
 {{Infobox ethnic group|
 | group = Iqbayliyen <br /> Imaziɣen, Izwawen, Imawtiyen, Igelsisen
-| image = Kabyle woman.jpg
+| image = 
 | regions = [[Maghreb]]
 | population = [[Circa|c.]] ~14 imelyan {{smallsup|e}}<ref name="creb">{{cite web | url=http://www.centrederechercheberbere.fr/kabyle.html | title=Kabyles around the world | accessdate=July 15, 2012}}</ref>
 | region1 = {{flagcountry|Algeria}}
