*Empty MediaWiki Message*

--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -1,6 +1,6 @@
 {{Infobox ethnic group|
-| group = Iqbayliyen <br /> Imaziɣen, Izwawen, Imawtiyen, Igelsisen
-| image =Hommes kabyles 
+| group = Iqbayliyen <br /> Imaziɣen
+| image = 
 | regions = [[Maghreb]]
 | population = [[Circa|c.]] ~14 imelyan {{smallsup|e}}<ref name="creb">{{cite web | url=http://www.centrederechercheberbere.fr/kabyle.html | title=Kabyles around the world | accessdate=July 15, 2012}}</ref>
 | region1 = {{flagcountry|Algeria}}
@@ -13,7 +13,7 @@
 | native_name =Imaziɣen, Izwawen, Imawtiyen, Igelsisen 
 | native_name_lang =ⵎⵣⵗⵏ, ⵣⵓⵓⵏ, ⵎⵓⵜⵢⵏ, ⴳⵍⵙⵙⵏ 
 | related_groups = 
-| image_caption = Tameṭṭut taqbaylit
+| image_caption = 
 }}
 '''Iqbayliyen''' neɣ '''Izdayen''' d [[aɣref]] [[imaziɣen|amaziɣ]] yettidir deg [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]] id yezgan deg Ugafa ASEMRAN n [[lezzayer]].
 
