--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -1,4 +1,4 @@
-'''Iqbayliyen''' neɣ '''Izdayen''' d [[aɣref]] [[imaziɣen|amaziɣ]] yettidir deg [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]] id yezgan deg Ugafa ASEMRAN n [[lezzayer]].
+'''Imaziɣen''' neɣ '''Izwawen''' (llan daɣen '''imawtiyen''' aked '''Igelsisen''') d agdud [[imaziɣen|amaziɣ]] yettidir deg [[Tamurt n Leqbayel|Tmawya]] id yezgan deg usmaw-asamer n [[lezzayer]].
 
 ==Ansa i d yekka wawal n "''Leqbayel''"== 
 Aẓaṛ n wawal-a yekka-d seg [[taɛrabt|teɛṛabt]] ''قبائل'' anamek-is s [[Taqbaylit|Teqbaylit]] «tiwsitin». Iṛumanen ssawalen-asen d ''Quinquegentanei'' (semmus (5) n Iderman), (wid izedɣen neɣ yettidiren ''Mons Ferratus'', "[[Ǧerǧer|Adrar n ğerğer]]"), wissen isem n tura ma yekka-d seg win n zik neɣ uhu. 
