/* Ansa i d yekka wawal n "Leqbayel" */

--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -1,4 +1,32 @@
-[[Catégorie:Modèle infobox <thème>]]
+{{Infobox Groupe ethnique
+ | nom               = 
+ | nom vernaculaire  =
+ | image             = 
+ | upright           = 
+ | légende           = 
+ | drapeau           = 
+ | montage           = 
+ | région 1          = 
+ | population 1      = 
+ | date 1            = 
+ | ref 1             = 
+…
+ | région 33         = 
+ | population 33     = 
+ | date 33           = 
+ | ref 33            = 
+ | population totale = 
+ | date totale       = 
+ | ref totale        = 
+ | origine           = 
+ | liste des chefs   =
+ | langue            = 
+ | religion          = 
+ | ethnie liée       = 
+ | carte             = 
+ | upright carte     = 
+ | légende carte     = 
+}}
 
 '''Imaziɣen'''<ref>[http://menadoc.bibliothek.uni-halle.de/download/pdf/994288?name=Weisheit]</ref> neɣ '''Izwawen''' (llan daɣen '''imawtiyen''' aked '''Igelsisen'''<ref>[https://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=62705]</ref>) d agdud [[imaziɣen|amaziɣ]] yettidir deg [[Tamurt n Leqbayel|Tmawya]] id yezgan deg usmaw-asamer n [[lezzayer]].
 
