*Empty MediaWiki Message*

--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -1,5 +1,5 @@
 {{Infobox Groupe ethnique
- | nom               = 
+ | nom               =Imaziɣen, Izwawen, Imawtiyen, Igelsisen 
  | nom vernaculaire  =
  | image             = 
  | upright           = 
