*Empty MediaWiki Message*

--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -1,3 +1,5 @@
+{{Infobox Groupe ethnique|Carte=Kabyle-speaking-map.jpg|Groupe liés=[[Chaouis]], [[Rifains]], [[Chenouis]], [[Chleuhs]], [[Mozabites]], [[Numide]]}}
+
 '''Imaziɣen'''<ref>[http://menadoc.bibliothek.uni-halle.de/download/pdf/994288?name=Weisheit]</ref> neɣ '''Izwawen''' (llan daɣen '''imawtiyen''' aked '''Igelsisen'''<ref>[https://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=62705]</ref>) d agdud [[imaziɣen|amaziɣ]] yettidir deg [[Tamurt n Leqbayel|Tmawya]] id yezgan deg usmaw-asamer n [[lezzayer]].
 
 ==Ansa i d yekka wawal n "''Leqbayel''"== 
