--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -1,32 +1,20 @@
 
-{{Infobox Groupe ethnique
- | nom               = 
- | nom vernaculaire  =
- | image             = 
- | upright           = 
- | légende           = 
- | drapeau           = 
- | montage           = 
- | région 1          = 
- | population 1      = 
- | date 1            = 
- | ref 1             = 
-…
- | région 33         = 
- | population 33     = 
- | date 33           = 
- | ref 33            = 
- | population totale = 
- | date totale       = 
- | ref totale        = 
- | origine           = 
- | liste des chefs   =
- | langue            = 
- | religion          = 
- | ethnie liée       = 
- | carte             = 
- | upright carte     = 
- | légende carte     = 
+{{Infobox ethnic group|
+| group = Iqbayliyen <br /> Imaziɣen
+| image = 
+| regions = [[Maghreb]]
+| population = [[Circa|c.]] ~14 imelyan {{smallsup|e}}<ref name="creb">{{cite web | url=http://www.centrederechercheberbere.fr/kabyle.html | title=Kabyles around the world | accessdate=July 15, 2012}}</ref>
+| region1 = {{flagcountry|Algeria}}
+| pop1 = 9 ɣer 14 ifeḍ
+| region2 = {{flagcountry|France}}
+| pop2 = 1 ifeḍ
+| langs = [[Tamaziɣt]]<br />Timslayin wis sin: [[Tafransist]], [[Taɛrabt]]<ref>{{cite book|last1=Frawley|first1=William J.|title=International Encyclopedia of Linguistics: AAVE - Esperanto, Volume 1|date=2003|publisher=Oxford University Press|isbn=978-0195139778|page=221|url=https://www.google.com/books?id=sl_dDVctycgC&pg=PA221|accessdate=21 December 2017}}</ref>
+| rels = Amur ameqqran d [[Islam|inselmen]] 98%, akken i tella tdersi yeṭṭafaren.
+2% wiyaḍ
+| native_name =Imaziɣen, Izwawen, Imawtiyen, Igelsisen 
+| native_name_lang =ⵎⵣⵗⵏ, ⵣⵓⵓⵏ, ⵎⵓⵜⵢⵏ, ⴳⵍⵙⵙⵏ 
+| related_groups = 
+| image_caption = 
 }}
 '''Imaziɣen'''<ref>[http://menadoc.bibliothek.uni-halle.de/download/pdf/994288?name=Weisheit]</ref> neɣ '''Izwawen''' (llan daɣen '''imawtiyen''' aked '''Igelsisen'''<ref>[https://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=62705]</ref>) d agdud [[imaziɣen|amaziɣ]] yettidir deg [[Tamurt n Leqbayel|Tmawya]] id yezgan deg usmaw-asamer n [[lezzayer]].
 
