*Empty MediaWiki Message*

--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -1,7 +1,7 @@
 
 {{Infobox ethnic group|
 | group = Iqbayliyen <br /> Imaziɣen
-| image = 
+| image =https://commons.wikimedia.org/wiki/File:Azwaw_ilem%E1%BA%93i_g_Bellevile.jpg?fbclid=IwAR3_e_Ke8i1ZjJVKcE5ZHEkfjxJ2tZYDCNDOJ6HxUymI_uubQyYGGK9-5Qk 
 | regions = [[Maghreb]]
 | population = [[Circa|c.]] ~14 imelyan {{smallsup|e}}<ref name="creb">{{cite web | url=http://www.centrederechercheberbere.fr/kabyle.html | title=Kabyles around the world | accessdate=July 15, 2012}}</ref>
 | region1 = {{flagcountry|Algeria}}
