*Empty MediaWiki Message*

--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -1,6 +1,5 @@
 
-{{Infobox ethnic group|
-| group = Iqbayliyen <br /> Imaziɣen
+{{Infobox ethnic group| group = Iqbayliyen <br /> Imaziɣen
 | image =[[File:Azwaw ilemẓi g Bellevile.jpg|thumb|Ilemẓi yelsa s ibidi-ynes.]] 
 | regions = [[Maghreb]]
 | population = [[Circa|c.]] ~14 imelyan {{smallsup|e}}<ref name="creb">{{cite web | url=http://www.centrederechercheberbere.fr/kabyle.html | title=Kabyles around the world | accessdate=July 15, 2012}}</ref>
