*Empty MediaWiki Message*

--- a/Isuknen.mw
+++ b/Isuknen.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''Isuknan''' (neɣ s [[taɛrabt]] : ''سوكنة‎'' neɣ daɣen ''Sokna''), d tamdint n wammas n [[Libya]], yerna d yiwet temdint n tgezdut (district) n [[Ljufra]] deg temnaṭ n [[Fezzan]] (''Tafezni'' s tmaziɣt taneṣlit). Zedɣen-tt 9,887 n yimezdaɣen.
+'''Isuknen''' (neɣ s [[taɛrabt]] : ''سوكنة‎'' neɣ daɣen ''Sokna''), d tamdint n wammas n [[Libya]], yerna d yiwet temdint n tgezdut (district) n [[Ljufra]] deg temnaṭ n [[Fezzan]] (''Tafezni'' s tmaziɣt taneṣlit). Zedɣen-tt 9,887 n yimezdaɣen.
 
 Yerna imezdaɣen-is ttmeslyaen s tmaziɣt i wumi neqqar [[Tasuknit]] maca ulac aṭas n wedlisen af tmeslayt-nni, ula d wemda (oasis) n [[Lfuqḥet]] tettmeslay-itt ar ass-a. 
 
