--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -16,7 +16,7 @@ Asrag n waṭṭan-a iga d avirus n [[SARS-CoV-2]]
 Zemren ad ilin ikayaden ɣef trawin n [[anagraw amesgunef|unagraw amesgunef]] neɣ n [[idammen]] <ref name="20200129cdc">{{amnir n web|akala=https://www.cdc.gov/coronavirus/2019-ncov/lab/rt-pcr-detection-instructions.html |azwel=Real-Time RT-PCR Panel for Detection 2019-nCoV |azmez=29 January 2020 |adeg=[[ammas i wsenɣed d tesɣil ɣef  waṭṭanen]] |azmez n tuwwṭa=1 fuṛaṛ 2020 |akala n ufaylu=https://web.archive.org/web/20200130202031/https://www.cdc.gov/coronavirus/2019-ncov/lab/rt-pcr-detection-instructions.html |azmez n ufaylu=30 January 2020 |url-status=live }}</ref> sin akin igemmad tt-biben-d seld n kra n tesragin neɣ n wussan
 
 == Asuji ==
-Seg 5 fuṛaṛ 2020, ur d-iban ara usuji i waṭṭan-a. Dɣa [[tuddsa tamadlant n tdawsa]] tessemter (tweṣṣa) s uttekki n imaɣzalen deg
+Seg 5 fuṛaṛ 2020, ur d-iban ara usuji i waṭṭan-a. Dɣa [[tuddsa tamadlant n tdawsa]] tessemter (tweṣṣa) s uttekki n imaɣzalen deg [[Arram imisi unɣid|yirramen imisiyen unɣiden]] i wkayad n tmellit d tɣellist n ussuji i zemren ad yili
 
 == Anfufed ==
 S unect n [[tasensakrart|tsensakrart]], [[isig n tmekkisin]] d waddaden n unfufed n waṭṭan-a ur yettwassnen ara
