*Empty MediaWiki Message*

--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -22,3 +22,5 @@ Seg 5 fuṛaṛ 2020, ur d-iban ara usuji i waṭṭan-a. Dɣa [[tuddsa tamadlan
 S unect n [[tasensakrart|tsensakrart]], [[isig n tmekkisin]] d waddaden n unfufed n waṭṭan-a ur yettwassnen ara
 
 == Imniren ==
+
+== Ẓeṛ daɣen ==
