--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -10,7 +10,7 @@ Addaden imekruzen (qessiḥen) n waṭṭan-a d wid izemren ad glun s [[Buturin|
 == Isragen (ssebbat) ==
 [[File:SARS-CoV-2 49531042877.jpg|thumb|adumu s tisit tiliktṛunant i tugna n SARS-CoV-2 (talemmast, awraɣ)<ref name=niaidSARS-CoV-2>{{Cite web|url=https://www.niaid.nih.gov/news-events/novel-coronavirus-sarscov2-images|title=New Images of Novel Coronavirus SARS-CoV-2 Now Available {{!}} NIH: National Institute of Allergy and Infectious Diseases|website=www.niaid.nih.gov|access-date=1 March 2020}}</ref>]]
 
-Asrag n waṭṭan-a iga d avirus n [[SARS-CoV-2]]
+Asrag n waṭṭan-a iga d avirus n [[SARS-CoV-2]]. Anda isem-is amezwaru yella d '''Coronavirus amaynu n 2019''' (2019-nCoV)
 
 == Tawassna ==
 [[Tuddsa tamadlant n tdawsa]] tfesr-d aṭas n ipṛutukulen i wkayar n Coronavirus amsetrar <ref name="Schirring16Jan2020">{{amnir n web|akala=http://www.cidrap.umn.edu/news-perspective/2020/01/japan-has-1st-novel-coronavirus-case-china-reports-another-death |azwel=Japan has 1st novel coronavirus case; China reports another death |aneggar=Schirring |amezwar=Lisa |aneggar=2020 |azmez=16 January 2020 |n ufaylu=CIDRAP |url-status=live |akala afaylu=https://web.archive.org/web/20200120043657/http://www.cidrap.umn.edu/news-perspective/2020/01/japan-has-1st-novel-coronavirus-case-china-reports-another-death |azmez n ufaylu=20 January 2020 |azmez n tuwwṭa=16 yennayer 2020}}</ref><ref name="WHO_InterimGuidance">{{amnir n web|akala=https://www.who.int/health-topics/coronavirus/laboratory-diagnostics-for-novel-coronavirus |azwel=Laboratory testing for 2019 novel coronavirus (2019-nCoV) in suspected human cases: Interim guidance |adeg=[[tuddsa tamadlant n tdawsa]] |url-status=live |akala n ufaylu=https://web.archive.org/web/20200120175355/https://www.who.int/health-topics/coronavirus/laboratory-diagnostics-for-novel-coronavirus |azmez n ufaylu=20 January 2020 |azmez n tuwwṭa=28 yennayer 2020}}</ref>, Akayad n [[Tasedmirt tanmezrit n Polimiraz i wseskel amuli]] (rRT-PCR)
