*Empty MediaWiki Message*

--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -13,7 +13,13 @@
 '''Imaziɣen'''<ref>[http://menadoc.bibliothek.uni-halle.de/download/pdf/994288?name=Weisheit]</ref> neɣ '''Izwawen''' (llan daɣen '''imawtiyen''' aked '''Igelsisen'''<ref>[https://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=62705]</ref>) d agdud [[imaziɣen|amaziɣ]] yettidir deg [[Tamurt n Leqbayel|Tmawya]] id yezgan deg usmaw-asamer n [[lezzayer]].
 
 ==Ansa i d yekka wawal n "''Leqbayel''"== 
-Aẓaṛ n wawal-a yekka-d seg [[taɛrabt|teɛṛabt]] ''قبائل'' anamek-is s [[Taqbaylit|Teqbaylit]] «tiwsitin». Iṛumanen ssawalen-asen d ''Quinquegentanei'' (semmus (5) n Iderman), (wid izedɣen neɣ yettidiren ''Mons Ferratus'', "[[Ǧerǧer|Adrar n ğerğer]]"), wissen isem n tura ma yekka-d seg win n zik neɣ uhu. 
+Isem amziki n izwawen d "Amaziɣ", awal-agi yekka-d seg uẓar MZƔ azaraw-is (lmaɛna-s) d aserhu, d iseɣ, d inzer, illi-d argaz n tidett ur yekna, illi-d tameṭṭut n tidett ur tettkerkis ara. Amaziɣ ur d akli. 
+
+Qqaren-asen daɣen i leqbayel "izwawen", ɣer Ibn Xeldun, azaraw-is d atarras, ɣur-nnaɣ Azwaw d atarras yeḍfer tasuli (laɛda) n zik, ila azal n imezwura, yekkat wuzzal war kukru, yezmer i wiyaḍnin. Yella aẓar ZW, azaraw-is d win yettuɣu g umennuɣ. 
+
+Aẓar n wawal "Amawti/Imawtiyen" yekka-d seg tangaṭ (taqbaylit taqqurant), yera (yebɣa) ad-yini "win n tawsit", acku zik isem n tmurt leqbayel d "Tamawya", yera ad-yini s tarumit "les familles, les tribus" g tangaṭ qqaren ayt zik i "la famille" : Tawya. 
+
+Aẓaṛ n wawal "aqbayli" yekka-d seg [[taɛrabt|teɛṛabt]] ''قبائل'' anamek-is s [[Taqbaylit|Teqbaylit]] «tiwsitin». Iṛumanen ssawalen-asen d ''Quinquegentanei'' (semmus (5) n Iderman), (wid izedɣen neɣ yettidiren ''Mons Ferratus'', "[[Ǧerǧer|Adrar n ğerğer]]"), wissen isem n tura ma yekka-d seg win n zik neɣ uhu. 
 
 S umata ur llin ara aḥric ameqran n tansa ɣef umezruy n yisem-agi, maca (d acu kan) nezmer a nefk yiwet n turda yesɛan assaɣ s tawtilt n Tamurt n Iqbayliyen deg ukud-nni (tallit-nni) imi medden ddren seddaw n tezmert neɣ iduba (adabu) n tiddukla n iderman.
 Ass-agi llan kra imusnawen iqbayliyen i d-yuran dakken isem n yeqbayliyen aẓaran (anaṣli) d Igawawen neɣ Izwawen. Af tekti-yagi amusnaw n Tesmislit aqbayli Mass [[Salem Caker]] yuran-d dakken [[Iqbayliyen]] ttun isem-nsen anaṣli "Izwawen" i d-yekkan seg wassag n yiwet n Taddart yettwasnen aṭas deg Tmurt iqbayliyen zîk. S tutlayt Tafransist awal "Zouave" yekka-d seg Azwaw.
