*Empty MediaWiki Message*

--- a/Tazegzawt_(taɣiwant).mw
+++ b/Tazegzawt_(taɣiwant).mw
@@ -1,6 +1,6 @@
 {{Infobox city}}
 
-'''Selma Benzyada''' neɣ '''Ayt Fuɣal''' ([[Tafransist]]: ''Selma Benziada'', [[Taɛrabt]]: ''سلمى بن زيادة''), d yiwet taɣiwant n Tmurt Leqbayel, i tezga-d al {{Unité|45|km}} g anẓul-amalu n [[Tawilayt_n_Jijel|Tawilayt n Jijel]]. Taɣiwant-aya, tesɛa azal n 920 imezdaɣ deg useggwas n 2008. G luqt n listiɛmar llan qqarn-as ''"Douar Béni Foughal"''.
+'''Tazegzawt''' (seld n [[aserɣen|userɣen]]: Salma ben zyada)  d yiwet [[taɣiwant|tɣiwant]] id yezgan deg usamer afellay n [[Tmurt n Leqbayel|tmurt n Iqbayliyen]], tezga-d {{Unité|45|km}} g unẓul utrim n [[Tawilayt_n_Jijel|ugezdu n Jijel]]. Taɣiwant aya tla (tesɛa) azal n 920 imezdaɣ deg useggwas n 2008. Imezdaɣ-is d [[adrum]] n '''Ayt Fuɣal'''
 
 === Asideg (timella) ===
 
