--- a/Aṭṭan_amesgunef.mw
+++ b/Aṭṭan_amesgunef.mw
@@ -9,5 +9,5 @@ D ayen yellan d amalfus (yezmer) i wsismel n waṭṭanen imesgunfanen d akken-i
 
 == Tawassna ==
 
-[[Taggayt:ṭṭanen]]
+[[Taggayt:aṭṭanen]]
 [[Taggayt:Aṭṭanen n unagraw amesgunef]]
