*Empty MediaWiki Message*

--- a/Aẓiẓ.mw
+++ b/Aẓiẓ.mw
@@ -11,9 +11,11 @@ Aẓiẓ d yiwen gar iylalen meqqren acku [[tiddi (tusnakt)|addud-is]] yettili g
 == Učči ==
 Aẓiẓ am yakk iylalen isekliwen d aylal anegmar, d [[Timseksumin|amseksum]] igemmr-d iɣersiwen yemgaraden
 
+== Ẓeṛ daɣen ==
+
 
 [[Category:Iɣersiwen]]
 [[Category:Iberniyen]]
 [[Category:Tisekliwin]]
 [[Category:Timseksumin]]
-[[Category:Iylalen]]
+[[Category:Igṭaṭ]]
