*Empty MediaWiki Message*

--- a/Aseflay.mw
+++ b/Aseflay.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Aseflay''' (Asget: '''Tiseflay'''), ([[Assaɣ usnan]]: ''Falcon'') d [[tawsit (tudersent)|tawsit]] n [[aylal|iylalen]] [[Tisekliwin|isekliwen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tiseflay|tseflay]] 
+'''Aseflay''' (Asget: '''Tiseflay'''), ([[Assaɣ usnan]]: ''Falcon'') d [[tawsit (tudersent)|tawsit]] n [[aylal|igṭaṭ]] [[Tisekliwin|isekliwen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tiseflay|tseflay]]
 
 == Tikeli d uglam ==
 [[Tamellalt|Timellalin]] n useflay ttefruruxen-d deg taggara n [[anebdu|unebdu]] deg tallit nni [[tawtemt]] n useflay [[tagemra|tgemmer-d]] tigmrawin n iylalen yettinigen i wakken ad ttessečč ifrax-is 
