*Empty MediaWiki Message*

--- a/Aseggas.mw
+++ b/Aseggas.mw
@@ -12,3 +12,5 @@ Deg iseggasen yezwaren 1582 d [[Taswast tajulyant]] i yellan tettusexdem i wside
 * [[Akud]]
 * [[Tasdidt]]
 * [[Ass]]
+
+[[taggayt:tasanayt]]
