*Empty MediaWiki Message*

--- a/2020.mw
+++ b/2020.mw
@@ -34,3 +34,5 @@ Aseggas '''2020''' deg teswast tagrigurit (calendrier grégorien), iwulem i useg
 ===Wamber===
 
 ===Dujember===
+
+[[Taggayt:Aseggas]]
