*Empty MediaWiki Message*

--- a/Alullam.mw
+++ b/Alullam.mw
@@ -1,4 +1,5 @@
 {{Automatic taxobox}}
+[[File:Falco biarmicus erlangeri MHNT.ZOO.2010.11.103.4.jpg|thumb| ''Falco biarmicus erlangeri'']]
 '''Alullam''' ([[Assaɣ usnan]]: ''Falco biarmicus'') d [[aylal]] [[tisekliwin|asekliw]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[aseflay|useflay]] deg [[tawacult (tasnudert)|twacult]] n [[tiseflay]], Alullam d aylal yettusexdmen i [[Agmar|wegmar]] aladɣa ɣer [[iserɣinen]] maca azal-is ur yugar ara Azal n [[asɣen|usɣen]] d [[Aberni|uberni]]
 
 == Tilmas n ulullam ==
