--- a/Taninna_n_Mrikan.mw
+++ b/Taninna_n_Mrikan.mw
@@ -1,4 +1,5 @@
 {{Automatic taxobox}}
+[[File:Falco sparverius MHNT.ZOO.2010.11.104.1.jpg|thumb| ''Falco sparverius'']]
 '''Taninna n Marikan''' ([[Assaɣ ussnan]]: ''Falco sparverius'') d [[talmest]] n [[aseflay|iseflayen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tiseflay]], Yettidir deg [[amenẓaw|umenẓaw]] n [[Tamrikt|Marikan]]
 
 == Ẓeṛ daɣen ==
