*Empty MediaWiki Message*

--- a/Taninnayt.mw
+++ b/Taninnayt.mw
@@ -1,4 +1,5 @@
 {{Automatic taxobox}}
+[[File:Falco naumanni MHNT.ZOO.2010.11.104.2.jpg|thumb| ''Falco naumanni'']]
 '''Taninnayt''' ([[Assaɣ ussnan]]: '' Falco naumanni'') d [[aseflay]] meẓẓiyen yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tiseflay|tseflay]], [[Amyaraw|yettemyarew]] deg yidgan yezzin i [[ilel agrakal|yilel agrakal]] d wneẓul alemmas n Asya ar [[Ccinwa|Cinwa]] d [[Mangulya]], [[Agaǧǧi n iylalen|Yettgaǧǧa]] deg [[tagrest|tegrest]] ar [[Tafriqt|Tefriqt]]  
 
 == Amgarad gar n tninnayt d [[taninna|tninna]] ==
