*Empty MediaWiki Message*

--- a/Ayt_Mellal.mw
+++ b/Ayt_Mellal.mw
@@ -1,4 +1,4 @@
-{{Infobox city}}
+{{Infobox city|image=Beni mellal hh.jpg}}
 '''Ayt Mellal''' (s [[tefṛensist]]: ''Beni Mellal''), d tamdint n wammas n [[Merruk]], tezga-d deg temnaṭ n [[Ayt Mellal-Xnifra]]. Zedɣen-tt 489,248 n yimezdaɣen.
 
 [[Category:Timdinin]][[Category:Merruk]]
