*Empty MediaWiki Message*

--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -23,6 +23,6 @@ Zemren ad ilin ikayaden ɣef trawin n [[anagraw amesgunef|unagraw amesgunef]] ne
 Seg 5 fuṛaṛ 2020, ur d-iban ara usuji i waṭṭan-a. Dɣa [[tuddsa tamadlant n tdawsa]] tessemter (tweṣṣa) s uttekki n imaɣzalen deg [[Arram imisi unɣid|yirramen imisiyen unɣiden]] i wkayad n tmellit d tɣellist n ussuji i zemren ad yili
 
 == Anfufed ==
-S unect n [[tasensakrart|tsensakrart]], [[isig n tmekkisin]] d waddaden n unfufed n waṭṭan-a ur yettwassnen ara
+S unect n [[tasensakrart|tsensakrart]], [[isig n tmekkisin]] d waddaden n unfufed n waṭṭan-a ur yettwassnen ara, acku [[isig n uẓeddim]] d win yettbeddilen seg wakud ar wayeṭ. Acku daɣen isig n wenṭaṭ
 
 == Imniren ==
