--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -23,6 +23,6 @@ Zemren ad ilin ikayaden ɣef trawin n [[anagraw amesgunef|unagraw amesgunef]] ne
 Seg 5 fuṛaṛ 2020, ur d-iban ara usuji i waṭṭan-a. Dɣa [[tuddsa tamadlant n tdawsa]] tessemter (tweṣṣa) s uttekki n imaɣzalen deg [[Arram imisi unɣid|yirramen imisiyen unɣiden]] i wkayad n tmellit d tɣellist n ussuji i zemren ad yili
 
 == Anfufed ==
-S unect n [[tasensakrart|tsensakrart]], [[isig n tmekkisin]] d waddaden n unfufed n waṭṭan-a ur yettwassnen ara, acku [[isig n uẓeddim]] d win yettbeddilen seg wakud ar wayeṭ. Acku daɣen isig n wenṭaṭ yettuzemren ad tettwissen zeddiɣ (mazal) Ur tban ara <ref>{{amnir n web|akala=https://www.statnews.com/2020/01/30/limited-data-may-skew-assumptions-severity-coronavirus-outbreak/|azwel=Limited data on coronavirus may be skewing assumptions about severity|azmez=2020-01-30|adeg=STAT|tutlayt=en-US|azmez n ufaylu=2020-02-01|akala n ufaylu=https://web.archive.org/web/20200201161634/https://www.statnews.com/2020/01/30/limited-data-may-skew-assumptions-severity-coronavirus-outbreak/|azmez n ufaylu=1 February 2020|url-status=live}}</ref><ref>{{amnir n web|akala=https://foreignpolicy.com/2020/01/26/2019-ncov-china-epidemic-pandemic-the-wuhan-coronavirus-a-tentative-clinical-profile/|azwel=How China's Coronavirus Is Spreading—and How to Stop It|aneggar=Sparrow|amezwar=Annie|adeg=Foreign Policy|tutlayt=en-US|azmez n tuwwṭa=2020-02-02|akala n ufaylu=https://web.archive.org/web/20200131025848/https://foreignpolicy.com/2020/01/26/2019-ncov-china-epidemic-pandemic-the-wuhan-coronavirus-a-tentative-clinical-profile/|azmez ufaylu=31 January 2020|url-status=live}}</ref>. Ɣas yella-d akk wanect-a. Maca inigen imenza yemmugen ɣef waṭṭan amesgunef amekruz yeqqnen ar Coronavirus amsetrar 2019 sseknen-d d akken isigen n tmekkest (lmut)  gant gar n 2 ar 3 %
+S unect n [[tasensakrart|tsensakrart]], [[isig n tmekkisin]] d waddaden n unfufed n waṭṭan-a ur yettwassnen ara, acku [[isig n uẓeddim]] d win yettbeddilen seg wakud ar wayeṭ. Acku daɣen isig n wenṭaṭ yettuzemren ad tettwissen zeddiɣ (mazal) Ur tban ara <ref>{{amnir n web|akala=https://www.statnews.com/2020/01/30/limited-data-may-skew-assumptions-severity-coronavirus-outbreak/|azwel=Limited data on coronavirus may be skewing assumptions about severity|azmez=2020-01-30|adeg=STAT|tutlayt=en-US|azmez n ufaylu=2020-02-01|akala n ufaylu=https://web.archive.org/web/20200201161634/https://www.statnews.com/2020/01/30/limited-data-may-skew-assumptions-severity-coronavirus-outbreak/|azmez n ufaylu=1 February 2020|url-status=live}}</ref><ref>{{amnir n web|akala=https://foreignpolicy.com/2020/01/26/2019-ncov-china-epidemic-pandemic-the-wuhan-coronavirus-a-tentative-clinical-profile/|azwel=How China's Coronavirus Is Spreading—and How to Stop It|aneggar=Sparrow|amezwar=Annie|adeg=Foreign Policy|tutlayt=en-US|azmez n tuwwṭa=2020-02-02|akala n ufaylu=https://web.archive.org/web/20200131025848/https://foreignpolicy.com/2020/01/26/2019-ncov-china-epidemic-pandemic-the-wuhan-coronavirus-a-tentative-clinical-profile/|azmez ufaylu=31 January 2020|url-status=live}}</ref>. Ɣas yella-d akk wanect-a. Maca inigen imenza yemmugen ɣef waṭṭan amesgunef amekruz yeqqnen ar Coronavirus amsetrar 2019 sseknen-d d akken isigen n tmekkest (lmut)  gant gar n 2 ar 3 % <ref>{{amnir n web|akala=https://www.worldometers.info/coronavirus/coronavirus-death-rate/#ref-6|azwel=Wuhan Coronavirus Death Rate - Worldometer|ansa=www.worldometers.info|tutlayt=en|azmez n tuwwṭa=2020-02-02|akala n ufaylu=https://web.archive.org/web/20200131223143/https://www.worldometers.info/coronavirus/coronavirus-death-rate/#ref-6|azmez n ufaylu=31 January 2020|url-status=live}}</ref>.
 
 == Imniren ==
