*Empty MediaWiki Message*

--- a/Agurim.mw
+++ b/Agurim.mw
@@ -3,6 +3,9 @@
 
 == Aglam ==
 
+== Ideggan n wemɣay ==
+Talmest-a d tin yettemɣayen s talɣa timezdit deg ugafa n [[Lezzayer]] (yakk d [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]] d ugafa n [[Tuness]] yakk d [[Ameṛṛuk|Umeṛṛuk]], d [[Urupa tutrimt]] akken yettwasekcem ar kra n tamiwin deg Uruppa tasemrant
+
 == Asismel ==
 
 == Asexdem ==
