*Empty MediaWiki Message*

--- a/Agurim.mw
+++ b/Agurim.mw
@@ -9,6 +9,7 @@ Talmest-a d tin yettemɣayen s talɣa timezdit deg ugafa n [[Lezzayer]] (yakk d 
 == Asismel ==
 
 == Asexdem ==
+Kra n iɣerfan n zik am [[igriken]] d [[iṛumanen]] sxedmen imɣi ayyi i tuqqsiwin n izerman
 
 == Ẓeṛ daɣen ==
 * [[Imi n waryel]]
