*Empty MediaWiki Message*

--- a/Agurim.mw
+++ b/Agurim.mw
@@ -2,6 +2,7 @@
 '''Agurim''' neɣ '''Butenzarin''' ([[Assaɣ ussnan]]: '''Salvia officinalis''') d [[talmest]] n [[imɣan]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[tazzurt]], Dɣa tawsit-a d tin yeṭṭafaren [[tawacult (tasnudert)|twacult]] n [[timcenfar|temcenfar]]
 
 == Aglam ==
+Agurim iga d [[imɣi asaɣur]] [[imɣi imezgi|amazray]]. Tiddi-ynes tga s ddaw n waddud n [[tamdikt|temdikt]]. [[Iferr|iferran-is]] zgan d izegzawen neɣ d izunɣiden deg tikwal nniden
 
 == Ideggan n wemɣay ==
 Talmest-a d tin yettemɣayen s talɣa timezdit deg ugafa n [[Lezzayer]] (yakk d [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]] d ugafa n [[Tuness]] yakk d [[Ameṛṛuk|Umeṛṛuk]], d [[Urupa tutrimt]] akken yettwasekcem ar kra n tamiwin deg Uruppa tasemrant
