--- a/Tamsedfart_tamesguneft_tamekruzt_tanamsadt.mw
+++ b/Tamsedfart_tamesguneft_tamekruzt_tanamsadt.mw
@@ -16,6 +16,8 @@ Avirus n SARS iban-d a tuggza tamadlant deg wayyur n [[meɣres]] n useggas n [[2
 == Addad amiran ==
 
 == Ẓeṛ daɣen ==
+* [[SARS-CoV]]
+* [[Covid-19]]
 
 == Iɣbula ==
 
