*Empty MediaWiki Message*

--- a/Tamsedfart_tamesguneft_tamekruzt_tanamsadt.mw
+++ b/Tamsedfart_tamesguneft_tamekruzt_tanamsadt.mw
@@ -22,3 +22,12 @@ Avirus n SARS iban-d a tuggza tamadlant deg wayyur n [[meɣres]] n useggas n [[2
 == Iɣbula ==
 
 == Imniren ==
+[[Taggayt:aṭṭanen iɣersagmanen]]
+[[Taggayt:Aṭṭanen n igṭaṭ]]
+[[Taggayt:Aṭṭanen n yimcac]] 
+[[Taggayt:irwasen]] 
+[[Taggayt:Buturin]]
+[[Category:Kuṛunavirus]]
+[[Taggayt:ivirusen id yekkan seg isaylalen]]
+[[Taggayt:tisakrarin tidawsanin n 2002]]
+[[Taggayt:tisakrarin tidawsanin n 2003]]
