--- a/Tamsedfart_tamesguneft_tamekruzt_tanamsadt.mw
+++ b/Tamsedfart_tamesguneft_tamekruzt_tanamsadt.mw
@@ -29,5 +29,6 @@ Avirus n SARS iban-d a tuggza tamadlant deg wayyur n [[meɣres]] n useggas n [[2
 [[Taggayt:Buturin]]
 [[Category:Kuṛunavirus]]
 [[Taggayt:ivirusen id yekkan seg isaylalen]]
-[[Taggayt:tisakrarin tidawsanin n 2002]]
-[[Taggayt:tisakrarin tidawsanin n 2003]]
+[[Taggayt:tisekrarin tidawsanin n 2002]]
+[[Taggayt:tisekrarin tidawsanin n 2003]]
+[[Taggayt:Tisekrarin n tsut tis 21]]
