*Empty MediaWiki Message*

--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -27,3 +27,7 @@ S unect n [[tasensakrart|tsensakrart]], [[isig n tmekkisin]] d waddaden n unfufe
 
 == Imniren ==
 [[Taggayt:Aṭṭanen iɣersagmanen]]
+[[Taggayt:Áreas n Kuṛunavirus 2019-20]] 
+[[Taggayt:Tisekrarin n tsut tis 21]]
+[[Taggayt:Tisekrarin tidawsanin n 2019]]
+[[Taggayt:Tisekrarin tidawsanin n 2020]]
