*Empty MediaWiki Message*

--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -9,4 +9,6 @@ Aṭas n tmura deg [[Turuft|Uruppa]] d [[Tamrikt n Ugafa|Temrikt tagafant]] d [[
 | tansa = www.cdc.gov
 | tutlayt = en-us
 |azmez n tuwwṭa = 31 yennayer 2020
-| akala u ufaylu = https://web.archive.org/web/20200131191845/https://www.cdc.gov/coronavirus/2019-ncov/locations-confirmed-cases.html | azmez n ufaylu = 31 yennayer 2020 }}</ref>
+| akala u ufaylu = https://web.archive.org/web/20200131191845/https://www.cdc.gov/coronavirus/2019-ncov/locations-confirmed-cases.html | azmez n ufaylu = 31 yennayer 2020 }}</ref>. [[Tallit n tezdalt]] d tin yettaṭṭafen 5 n wussan neɣ ugar, akken illan inzan imenza d akken yezmer ad yili d [[aṭṭan amanṭaṭ|amanṭaṭ]] send ma ad binen iskanen, iskanen-a gan d [[tawla]], [[tusut]] d [[bungaf]] akken i yezmer ad yawi ar [[Timekkest|tmekkest]] (lmut) 
+
+Seg 31 yennayer 2020 yettusentem (yettuwekked) ɣef tilin n 75,775 n tmelliyin (liḥalat) gar-asent timelliyin yellan deg yakk igrzda n [[Ccinwa]]
